# LTPhone

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: alpha_in.xml  alpha_null.xml  alpha_out.xml
app/src/main/res/drawable/: button_font.xml  progress_round.xml  shape_btn_blue_bg.xml  shape_btn_gray_line_white_bg.xml  shape_btn_green_bg.xml  shape_btn_white_line.xml  shape_btn_white_line_gray_bg_big.xml  shape_green_point_on.xml  shape_red_oval.xml  shape_toast.xml  tab_menu_friends.xml  tab_menu_groups.xml  tab_menu_huatong.xml  tab_menu_message.xml  tab_menu_setting.xml  tab_menu_word.xml
app/src/main/res/layout/: activity_about.xml  activity_big_image.xml  activity_broadcast.xml  activity_broadcast_receive.xml  activity_broadcast_send.xml  activity_change_pw.xml  activity_changepw_success.xml  activity_chat_friend.xml  activity_chat_group.xml  activity_info_group.xml  activity_login.xml  activity_main.xml  activity_receiver_image.xml  activity_user_info.xml  activity_voice_friend.xml  activity_voice_play.xml  customprogressdialog.xml  dialog_message.xml  dialog_prermission.xml  fragment_friends.xml  fragment_groups.xml  (+11 more)
gradle/wrapper/: gradle-wrapper.properties
netsdk/: build.gradle
netsdk/src/main/: AndroidManifest.xml
webrtclib/: CMakeLists.txt  build.gradle
webrtclib/src/main/: AndroidManifest.xml
webrtclib/src/main/cpp/: audio_ns.cpp  audio_ns.h  native-lib.cpp  typedefs.h
webrtclib/src/main/java/com/test/jni/: ADPCM.java  VoiceUtil.java
(+130 files in other folders)
